--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -173,7 +173,7 @@ jobs:
                   USER: runner
 
             - name: Build
-              run: echo nix build .#gnosisvpn-${{ matrix.architecture }} -L
+              run: nix build .#gnosisvpn-${{ matrix.architecture }} -L
 
             - name: Publish binary
               id: binary
@@ -181,11 +181,11 @@ jobs:
                 set -x
                 pr_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')-pr.${{ github.event.pull_request.number }}
                 echo "pr_version=$pr_version" >> ·GITHUB_OUTPUT
-                mv results/bin/gnosis-vpn results/bin/gnosis-vpn-${{ matrix.architecture }}
-                mv results/bin/gnosis-vpn-ctl results/bin/gnosis-vpn-ctl-${{ matrix.architecture }}
+                cp results/bin/gnosis-vpn ./gnosis-vpn-${{ matrix.architecture }}
+                cp results/bin/gnosis-vpn-ctl ./gnosis-vpn-ctl-${{ matrix.architecture }}
                 gcloud config set artifacts/location europe-west3
-                gcloud artifacts generic upload --repository="rust-binaries" --version=${pr_version} --package=gnosis-vpn     --source=results/bin/gnosis-vpn-${{ matrix.architecture }}
-                gcloud artifacts generic upload --repository="rust-binaries" --version=${pr_version} --package=gnosis-vpn-ctl --source=results/bin/gnosis-vpn-ctl-${{ matrix.architecture }}
+                gcloud artifacts generic upload --repository="rust-binaries" --version=${pr_version} --package=gnosis-vpn     --source=./gnosis-vpn-${{ matrix.architecture }}
+                gcloud artifacts generic upload --repository="rust-binaries" --version=${pr_version} --package=gnosis-vpn-ctl --source=./gnosis-vpn-ctl-${{ matrix.architecture }}
 
     comment:
         name: Comment PR
