--- a/.github/workflows/build-binaries.yaml
+++ b/.github/workflows/build-binaries.yaml
@@ -78,6 +78,9 @@ jobs:
           echo "branch=${branch}" | tee -a $GITHUB_OUTPUT
           echo "architecture=${architecture}" | tee -a $GITHUB_OUTPUT
           echo "publish_type=${publish_type}" | tee -a $GITHUB_OUTPUT
+          set -x
+          echo "Event Name: ${{ github.event_name}}"
+          echo "Pull request action: ${{ github.event.pull_request.action }}"
 
       - name: Checkout repository
         uses: actions/checkout@v4
