--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -15,6 +15,7 @@ concurrency:
 jobs:
     delete-artifacts:
         name: Delete artifacts
+        if: false
         runs-on: self-hosted-hoprnet-small
         #if: github.event.pull_request.merged == true
 
@@ -216,44 +217,44 @@ jobs:
         version_type: 'pr'
       secrets: inherit
 
-    comment:
-        name: Comment PR
-        runs-on: self-hosted-hoprnet-small
-        needs:
-            - build-binaries
-        #if: github.event.pull_request.merged == true
+    # comment:
+    #     name: Comment PR
+    #     runs-on: self-hosted-hoprnet-small
+    #     needs:
+    #         - build-binaries
+    #     #if: github.event.pull_request.merged == true
 
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
+    #     steps:
+    #         - name: Checkout repository
+    #           uses: actions/checkout@v4
 
-            - name: Get version
-              id: vars
-              run: |
-                set -x
-                pr_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')-pr.${{ github.event.pull_request.number }}
-                echo "pr_version=$pr_version" >> $GITHUB_OUTPUT
+    #         - name: Get version
+    #           id: vars
+    #           run: |
+    #             set -x
+    #             pr_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')-pr.${{ github.event.pull_request.number }}
+    #             echo "pr_version=$pr_version" >> $GITHUB_OUTPUT
 
-            - name: Create comment
-              uses: peter-evans/create-or-update-comment@v4
-              with:
-                issue-number: ${{ github.event.pull_request.number }}
-                body: |
-                    The binaries for this PR can be downloaded from:
-                    ```
-                    mkdir ./binaries
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-aarch64-linux --destination=./binaries --local-filename=gnosis-vpn-aarch64-linux
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-aarch64-linux --destination=./binaries --local-filename=gnosis-vpn-ctl-aarch64-linux
+    #         - name: Create comment
+    #           uses: peter-evans/create-or-update-comment@v4
+    #           with:
+    #             issue-number: ${{ github.event.pull_request.number }}
+    #             body: |
+    #                 The binaries for this PR can be downloaded from:
+    #                 ```
+    #                 mkdir ./binaries
+    #                 gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-aarch64-linux --destination=./binaries --local-filename=gnosis-vpn-aarch64-linux
+    #                 gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-aarch64-linux --destination=./binaries --local-filename=gnosis-vpn-ctl-aarch64-linux
 
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-x86_64-linux --destination=./binaries --local-filename=gnosis-vpn-x86_64-linux
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-x86_64-linux --destination=./binaries --local-filename=gnosis-vpn-x86_64-linux
+    #                 gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-x86_64-linux --destination=./binaries --local-filename=gnosis-vpn-x86_64-linux
+    #                 gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-x86_64-linux --destination=./binaries --local-filename=gnosis-vpn-x86_64-linux
 
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-armv7l-linux --destination=./binaries --local-filename=gnosis-vpn-armv7l-linux
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-armv7l-linux --destination=./binaries --local-filename=gnosis-vpn-armv7l-linux
+    #                 gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-armv7l-linux --destination=./binaries --local-filename=gnosis-vpn-armv7l-linux
+    #                 gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-armv7l-linux --destination=./binaries --local-filename=gnosis-vpn-armv7l-linux
 
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-aarch64-darwin --destination=./binaries --local-filename=gnosis-vpn-aarch64-darwin
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-aarch64-darwin --destination=./binaries --local-filename=gnosis-vpn-aarch64-darwin
+    #                 gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-aarch64-darwin --destination=./binaries --local-filename=gnosis-vpn-aarch64-darwin
+    #                 gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-aarch64-darwin --destination=./binaries --local-filename=gnosis-vpn-aarch64-darwin
 
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-x86_64-darwin --destination=./binaries --local-filename=gnosis-vpn-x86_64-darwin
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-x86_64-darwin --destination=./binaries --local-filename=gnosis-vpn-x86_64-darwin
-                    ```
+    #                 gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-x86_64-darwin --destination=./binaries --local-filename=gnosis-vpn-x86_64-darwin
+    #                 gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-x86_64-darwin --destination=./binaries --local-filename=gnosis-vpn-x86_64-darwin
+    #                 ```
