--- a/.github/workflows/build-binaries.yaml
+++ b/.github/workflows/build-binaries.yaml
@@ -49,8 +49,8 @@ jobs:
   binary:
     if: >-
       github.event_name == 'workflow_dispatch' ||
-      (github.event_name == 'pull_request' && github.event.pull_request.action != 'close' && contains(github.event.pull_request.labels.*.name, format('binary:{0}', inputs.architecture))) ||
-      (github.event_name == 'pull_request' && github.event.pull_request.action == 'synchronize')
+      (github.event_name == 'pull_request' && github.event.action != 'close' && contains(github.event.pull_request.labels.*.name, format('binary:{0}', inputs.architecture))) ||
+      (github.event_name == 'pull_request' && github.event.action == 'synchronize')
     runs-on: ${{ github.event.inputs.runner || inputs.runner }}
     timeout-minutes: 60
     steps:
@@ -80,7 +80,7 @@ jobs:
           echo "publish_type=${publish_type}" | tee -a $GITHUB_OUTPUT
           set -x
           echo "Event Name: ${{ github.event_name}}"
-          echo "Pull request action: ${{ github.event.pull_request.action }}"
+          echo "Pull request action: ${{ github.event.action }}"
 
       - name: Checkout repository
         uses: actions/checkout@v4
